<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where You App?</string>
    <string name="no_address">No Address Selected</string>
    <string name ="set_address">Set</string>
    <string name="route_name">Route name</string>
    <string name="enter_address">Address</string>
    <string name="enter_radius">Choose target radius (in miles)</string>
    <string name="enter_contact">Phone number</string>
    <string name="enter_message">Message</string>
    <string name="save">Save</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_add_route_screen">Add Route</string>
    <string name="title_activity_saved_routes_screen">Saved Routes</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_route_screen_message">Message</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main_screen">Where You App?</string>
    <string name="add_route_button">Add Route</string>
    <string name="welcome_message">Welcome to Where You App?, presented by Prometheus Software</string>
    <string name="title_activity_credits_screen">Credits</string>
    <string name="credits_message">Credits message</string>
    <string name="credits">Credits</string>
    <string name="tutorial">Help</string>
    <string name="title_activity_tutorial_screen">Tutorial</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings_screen">Settings</string>
    <string name = "battery_level">Enter threshold battery level</string>
    <string name = "route_name1">Enter route name:</string>
    <string name = "enter_address1">Enter address:</string>
    <string name = "enter_radius1">Enter radius of contact (in miles):</string>
    <string name = "enter_contact1">Emergency number 1</string>
    <string name = "enter_contact2">Emergency number 2</string>
    <string name = "enter_contact3">Emergency number 3</string>
    <string name = "enter_contact4">Emergency number 4</string>
    <string name = "enter_contact5">Emergency number 5</string>
    <string name = "enter_message1">Enter text message:</string>
    <string name = "back">Back</string>
    <string name = "tutorial_message">How to use Where You App?</string>
    <string name = "km_mile">Choose km or mile as measurement</string>
    <string name = "contact_list">Contacts</string>
    <string name = "CBdescription">A button that allows user to choose a number from contacts.</string>
    <string name="battery_messenger">Low Battery Messenger</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="distance_text">Send Message When Within:</string>
    <string name="kilometers">Kilometers</string>
    <string name="miles">Miles</string>
    <string name = "commute">Daily Commute?</string>
    <string name = "yes">Yes</string>
    <string name = "no">No</string>
    <string name = "monday">Monday</string>
    <string name = "tuesday">Tuesday</string>
    <string name = "wednesday">Wednesday</string>
    <string name = "thursday">Thursday</string>
    <string name = "friday">Friday</string>
    <string name = "saturday">Saturday</string>
    <string name = "sunday">Sunday</string>
    <string name = "enter_hours">Hours</string>
    <string name = "enter_minutes">Minutes</string>
</resources>
