<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainScreen" >

    <Button
        android:id="@+id/add_route"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:background="@drawable/rounded_button"
        android:onClick="addRoute"
        android:text="@string/add_route_button" />

    <Button
        android:id="@+id/myRoutes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/add_route"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounded_button"
        android:text="My Routes" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="42dp" >

    </LinearLayout>

    <Button
        android:id="@+id/tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:background="@drawable/rounded_button"
        android:onClick="displayDialog"
        android:text="@string/tutorial" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tutorial"
        android:layout_alignBottom="@+id/tutorial"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_marginRight="18dp"
        android:background="@drawable/rounded_button"
        android:onClick="toSettings"
        android:text="@string/settings" />

</RelativeLayout>